Fix warnings and stuff